<resources>
    <string name="app_name">Epidemy</string>
    <string name="start_game_button">Start Game</string>
    <string name="fullscreen_content">Background content</string>
    <string name="title_activity_game_board">Game Board</string>
    <string name="action_settings">Settings</string>
    <string name="action_surrender">Surrender</string>
    <string name="final_stats_congrats">Congrats!</string>
    <string name="final_stats_back">Back to main menu</string>
    <string name="final_stats_revenge">Revenge</string>
    <string name="final_stats_view_board">View board</string>
    <string name="winner">Winner</string>
    <string name="loser">Loser</string>
    <string name="surrender">Surrender</string>
    <string name="has_no_marks">Has no marks</string>
    <string name="has_no_moves">Has no moves</string>
    <string name="final_stats_player_name">Name</string>
    <string name="final_stats_player_color">Color</string>
    <string name="final_stats_player_state">State</string>
    <string name="final_stats_player_lose_reason">Lose reason</string>
    <string name="final_stats_player_lose_turn">Lose turn</string>
    <string name="UNREACHABLE_CELL">Cell is unreachable</string>
    <string name="ENEMY_WALL_HIT">You can\'t hit an enemy wall</string>
    <string name="OWN_CROSS_HIT">You can\'t hit your own mark</string>
    <string name="OWN_WALL_HIT">You can\'t hit your own wall</string>
    <string name="status_bar_active_player">"Active player: "</string>
    <string name="status_bar_number_of_moves">"Number of moves: "</string>
    <string name="status_bar_current_turn">"Turn: "</string>
    <string name="status_bar_separator">" | "</string>
    <string name="next_player">"Next player is "</string>
    <string name="is_defeated">" is defeated!"</string>
    <string name="is_winner">" is the winner!"</string>
    <string name="behold">"Behold!"</string>
    <string name="ok">"OK"</string>
    <string name="options_button">Options</string>
    <string name="title_options_list">Options</string>
    <string name="title_options_detail">Options Detail</string>
    <string name="game_options">Game</string>
    <string name="board_options">Board</string>
    <string name="users_options">Users</string>
    <string name="defaults_options">Defaults</string>
    <string name="error_options_detail">Error options detail!</string>
    <string name="number_of_players">"Number of players: "</string>
    <string name="number_of_moves">"Number of moves: "</string>
    <string name="board_width">"Board width: "</string>
    <string name="board_height">"Board height: "</string>
    <string name="show_cell_numbers">Show cell numbers</string>
    <string name="title_activity_final_stats">Score Board</string>
    <string name="square_board">Square board</string>
    <string name="reset_options_to_default">Reset options to default</string>
    <string name="sharedPrefs_number_of_players">number_of_players</string>
    <string name="sharedPrefs_number_of_moves">number_of_moves</string>
    <string name="sharedPrefs_board_width">board_width</string>
    <string name="sharedPrefs_board_height">board_height</string>
    <string name="sharedPrefs_square_board">square_board</string>
    <string name="sharedPrefs_show_cell_numbers">show_cell_numbers</string>
    <string name="sharedPrefs_player_name">name_of_player</string>
    <string name="sharedPrefs_player_color">color_of_player</string>
    <string name="main_screen_logo">logo</string>
    <string name="options_reset">"Default options were restored"</string>
    <string name="play_with_ai">Play with Robot Alpha</string>
    <string name="help_button">Help</string>
    <string name="title_activity_help">Help</string>

    <string name="helpText">Welcome to the Epidemy game!\nThe rules are simple. The goal is to defeat all other players. This can be achieved by destroying all their crosses or leaving them no move to make. Players make their turns one after another. Each turn the player can make a certain number of moves (3 by default). Each move is a cross or a wall. A cross can be placed on a blank board cell. A wall can be placed on a enemy cross. A move can be made in a board cell that is right next to your cross or to your wall that is connected to your cross directly or through your other walls. You can do nothing with enemy walls but leave them without connection to the enemy crosses. First move is always left upper conner.</string>
</resources>
