<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.rozdy.epidemy.ui.MainMenuActivity">

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/menu_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/menu_logo"
            android:contentDescription="@string/main_screen_logo" />

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startGame"
            android:text="@string/start_game_button" />

        <Button
            android:id="@+id/options_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showOptions"
            android:text="@string/options_button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_with_ai"
            android:id="@+id/play_with_ai"
            android:onClick="startGameAI" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_button"
            android:id="@+id/help"
            android:onClick="goToHelp" />
    </LinearLayout>
</FrameLayout>
