<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.rozdy.epidemy.ui.MainMenuActivity">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/fullscreen_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/menu_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/menu_logo" />

        <Button
            android:id="@+id/start_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startGame"
            android:text="@string/start_game_button" />

        <Button
            android:id="@+id/options_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showOptions"
            android:text="@string/options_button" />
    </LinearLayout>
</FrameLayout>
