<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/board_width_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/board_width" />

    <TextView
        android:id="@+id/board_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/board_width_caption" />

    <SeekBar
        android:id="@+id/board_width_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/board_width"
        android:padding="@dimen/padding" />

    <TextView
        android:id="@+id/board_height_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/board_width_seek_bar"
        android:padding="@dimen/padding"
        android:text="@string/board_height" />

    <TextView
        android:id="@+id/board_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/board_height_caption" />

    <SeekBar
        android:id="@+id/board_height_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/board_height"
        android:padding="@dimen/padding" />

    <TextView
        android:id="@+id/square_board_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/board_height_seek_bar"
        android:padding="@dimen/padding"
        android:text="@string/square_board" />

    <Switch
        android:id="@+id/square_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/board_height_seek_bar"
        android:padding="@dimen/padding" />

    <TextView
        android:id="@+id/show_cell_numbers_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/square_board"
        android:padding="@dimen/padding"
        android:text="@string/show_cell_numbers" />

    <Switch
        android:id="@+id/show_cell_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/square_board"
        android:padding="@dimen/padding" />
</RelativeLayout>